login now required to access bioboxes and interfaces.

--- a/bioboxgui/static/index.html
+++ b/bioboxgui/static/index.html
@@ -13,6 +13,7 @@
     <script src="/static/js/controllers.js"></script>
     <script src="/static/js/directives.js"></script>
     <script src="/static/js/services.js"></script>
+    <script src="/static/js/interceptors.js"></script>
 
     <title>Biobox GUI</title>
 </head>
