--- a/bioboxgui/static/index.html
+++ b/bioboxgui/static/index.html
@@ -2,18 +2,24 @@
 <html lang="en" ng-app="BioboxGui">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link data-require="bootstrap-css@3.1.1" data-semver="3.1.1" rel="stylesheet"
           href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="/static/css/style.css"/>
+    <link rel="stylesheet" href="/static/assets/css/style.css"/>
     <script data-require="angular.js@*" data-semver="1.2.29" src="http://code.angularjs.org/1.2.29/angular.js"></script>
     <script data-require="angular-resource@*" data-semver="1.2.13"
             src="http://code.angularjs.org/1.2.13/angular-resource.js"></script>
     <script src="https://code.angularjs.org/1.2.25/angular-route.js"></script>
-    <script src="/static/js/app.js"></script>
-    <script src="/static/js/controllers.js"></script>
-    <script src="/static/js/directives.js"></script>
-    <script src="/static/js/services.js"></script>
-    <script src="/static/js/interceptors.js"></script>
+    <script src="/static/angular/app.module.js"></script>
+    <script src="/static/angular/app.routes.js"></script>
+    <script src="/static/angular/shared/navigation/navigationInterceptors.js"></script>
+    <script src="/static/angular/shared/navigation/navigationDirectives.js"></script>
+    <script src="/static/angular/shared/navigation/navigationServices.js"></script>
+    <script src="/static/angular/components/bioboxes/bioboxesServices.js"></script>
+    <script src="/static/angular/components/bioboxes/bioboxesControllers.js"></script>
+    <script src="/static/angular/components/bioboxes/bioboxesDirectives.js"></script>
+    <script src="/static/angular/components/login/loginServices.js"></script>
+    <script src="/static/angular/components/login/loginControllers.js"></script>
 
     <title>Biobox GUI</title>
 </head>
@@ -26,8 +32,8 @@
     <hr>
     <footer id="footer" class="footer">
         <div class="footer-left">
-            <a href="#/bioboxgui/about">About</a> |
-            <a href="#/bioboxgui">Home</a>
+            <a ng-href="#/bioboxgui/about">About</a> |
+            <a ng-href="#/bioboxgui">Home</a>
         </div>
         <div class="footer-right">
             <span>&copy; 2016 Biobox GUI</span>
