--- a/bioboxgui/static/index.html
+++ b/bioboxgui/static/index.html
@@ -10,6 +10,7 @@
     <script data-require="angular-resource@*" data-semver="1.2.13"
             src="http://code.angularjs.org/1.2.13/angular-resource.js"></script>
     <script src="https://code.angularjs.org/1.2.25/angular-route.js"></script>
+    <script src="//cdn.rawgit.com/auth0/angular-storage/master/dist/angular-storage.js"></script>
 
     <title>Biobox GUI</title>
 </head>
@@ -35,12 +36,15 @@
 <script src="/static/angular/shared/navigation/navigation.interceptor.js"></script>
 <script src="/static/angular/shared/navigation/navigation.directive.js"></script>
 <script src="/static/angular/shared/navigation/navigation.service.js"></script>
+<script src="/static/angular/shared/user/user.service.js"></script>
 <script src="/static/angular/components/bioboxes/bioboxes.service.js"></script>
 <script src="/static/angular/components/bioboxes/bioboxes.controller.js"></script>
 <script src="/static/angular/components/bioboxes/directives/biobox.directive.js"></script>
 <script src="/static/angular/components/bioboxes/directives/biobox-list.directive.js"></script>
 <script src="/static/angular/components/bioboxes/directives/biobox-meta.directive.js"></script>
 <script src="/static/angular/components/bioboxes/directives/biobox-greeting.directive.js"></script>
+<script src="/static/angular/components/states/states.service.js"></script>
+<script src="/static/angular/components/states/states.controller.js"></script>
 <script src="/static/angular/components/login/login.service.js"></script>
 <script src="/static/angular/components/login/login.controller.js"></script>
 <script src="/static/angular/components/register/register.controller.js"></script>
