add some rudimentary administrator tasks and authentication overhaul.

--- a/bioboxgui/static/index.html
+++ b/bioboxgui/static/index.html
@@ -36,7 +36,7 @@
 <script src="/static/angular/shared/navigation/navigation.interceptor.js"></script>
 <script src="/static/angular/shared/navigation/navigation.directive.js"></script>
 <script src="/static/angular/shared/navigation/navigation.service.js"></script>
-<script src="/static/angular/shared/user/user.service.js"></script>
+<script src="/static/angular/shared/session/session.service.js"></script>
 <script src="/static/angular/components/bioboxes/bioboxes.service.js"></script>
 <script src="/static/angular/components/bioboxes/bioboxes.controller.js"></script>
 <script src="/static/angular/components/bioboxes/directives/biobox.directive.js"></script>
@@ -48,5 +48,8 @@
 <script src="/static/angular/components/login/login.service.js"></script>
 <script src="/static/angular/components/login/login.controller.js"></script>
 <script src="/static/angular/components/register/register.controller.js"></script>
+<script src="/static/angular/components/administration/administration.controller.js"></script>
+<script src="/static/angular/components/administration/user.service.js"></script>
+<script src="/static/angular/components/administration/source.service.js"></script>
 </body>
 </html>
