Adds static libraries.

--- a/bioboxgui/static/index.html
+++ b/bioboxgui/static/index.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link data-require="bootstrap-css@3.1.1" data-semver="3.1.1" rel="stylesheet"
-          href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/static/include/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/static/assets/css/style.css"/>
-    <script data-require="angular.js@*" data-semver="1.2.29" src="http://code.angularjs.org/1.2.29/angular.js"></script>
-    <script data-require="angular-resource@*" data-semver="1.2.13"
-            src="http://code.angularjs.org/1.2.13/angular-resource.js"></script>
-    <script src="https://code.angularjs.org/1.2.25/angular-route.js"></script>
-    <script src="//cdn.rawgit.com/auth0/angular-storage/master/dist/angular-storage.js"></script>
+    <link rel="stylesheet" href="/static/include/css/angular-ui-notification.min.css"/>
+    <script src="/static/include/js/angular.min.js"></script>
+    <script src="/static/include/js/angular-resource.min.js"></script>
+    <script src="/static/include/js/angular-route.min.js"></script>
+    <script src="/static/include/js/angular-storage.min.js"></script>
 
     <title>Biobox GUI</title>
 </head>
@@ -31,6 +30,7 @@
     </footer>
 </div>
 
+<script src="/static/include/js/angular-ui-notification.min.js"></script>
 <script src="/static/angular/app.module.js"></script>
 <script src="/static/angular/app.routes.js"></script>
 <script src="/static/angular/shared/navigation/navigation.interceptor.js"></script>
