Adds global constants for user roles.

--- a/bioboxgui/static/index.html
+++ b/bioboxgui/static/index.html
@@ -32,6 +32,7 @@
 </div>
 
 <script src="/static/angular/app.module.js"></script>
+<script src="/static/angular/app.constants.js"></script>
 <script src="/static/angular/app.routes.js"></script>
 <script src="/static/angular/shared/navigation/navigation.interceptor.js"></script>
 <script src="/static/angular/shared/navigation/navigation.directive.js"></script>
