--- a/bioboxgui/static/index.html
+++ b/bioboxgui/static/index.html
@@ -37,6 +37,7 @@
 <script src="/static/angular/shared/navigation/navigation.interceptor.js"></script>
 <script src="/static/angular/shared/navigation/navigation.directive.js"></script>
 <script src="/static/angular/shared/navigation/navigation.service.js"></script>
+<script src="/static/angular/shared/navigation/navigation.controller.js"></script>
 <script src="/static/angular/shared/session/session.service.js"></script>
 <script src="/static/angular/components/bioboxes/bioboxes.service.js"></script>
 <script src="/static/angular/components/bioboxes/bioboxes.controller.js"></script>
