--- a/bioboxgui/static/index.html
+++ b/bioboxgui/static/index.html
@@ -34,6 +34,7 @@
 <script src="/static/angular/app.module.js"></script>
 <script src="/static/angular/app.constants.js"></script>
 <script src="/static/angular/app.routes.js"></script>
+<script src="/static/angular/shared/util/gateway.service.js"></script>
 <script src="/static/angular/shared/navigation/navigation.interceptor.js"></script>
 <script src="/static/angular/shared/navigation/navigation.directive.js"></script>
 <script src="/static/angular/shared/navigation/navigation.service.js"></script>
