Adds manage permissions functionality.

--- a/bioboxgui/static/index.html
+++ b/bioboxgui/static/index.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" href="/static/include/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/static/assets/css/style.css"/>
     <link rel="stylesheet" href="/static/include/css/angular-ui-notification.min.css"/>
+    <link rel="stylesheet" href="/static/include/css/isteven-multi-select.css"/>
     <script src="/static/include/js/angular.min.js"></script>
     <script src="/static/include/js/angular-resource.min.js"></script>
     <script src="/static/include/js/angular-route.min.js"></script>
     <script src="/static/include/js/angular-storage.min.js"></script>
     <script src="/static/include/js/angular-ui-notification.min.js"></script>
+    <script src="/static/include/js/isteven-multi-select.js"></script>
 
     <title>Biobox GUI</title>
 </head>
