Splits administration view in two.

--- a/bioboxgui/static/index.html
+++ b/bioboxgui/static/index.html
@@ -36,25 +36,35 @@
 <script src="/static/angular/app.module.js"></script>
 <script src="/static/angular/app.constants.js"></script>
 <script src="/static/angular/app.routes.js"></script>
+
 <script src="/static/angular/shared/util/gateway.service.js"></script>
+
 <script src="/static/angular/shared/navigation/navigation.interceptor.js"></script>
 <script src="/static/angular/shared/navigation/navigation.directive.js"></script>
 <script src="/static/angular/shared/navigation/navigation.service.js"></script>
 <script src="/static/angular/shared/navigation/navigation.controller.js"></script>
+
 <script src="/static/angular/shared/session/session.service.js"></script>
+
 <script src="/static/angular/components/bioboxes/bioboxes.service.js"></script>
 <script src="/static/angular/components/bioboxes/bioboxes.controller.js"></script>
+
 <script src="/static/angular/components/bioboxes/directives/biobox.directive.js"></script>
 <script src="/static/angular/components/bioboxes/directives/biobox-list.directive.js"></script>
 <script src="/static/angular/components/bioboxes/directives/biobox-meta.directive.js"></script>
 <script src="/static/angular/components/bioboxes/directives/biobox-greeting.directive.js"></script>
+
 <script src="/static/angular/components/states/states.service.js"></script>
 <script src="/static/angular/components/states/states.controller.js"></script>
+
 <script src="/static/angular/components/login/login.service.js"></script>
 <script src="/static/angular/components/login/login.controller.js"></script>
-<script src="/static/angular/components/register/register.controller.js"></script>
-<script src="/static/angular/components/administration/administration.controller.js"></script>
-<script src="/static/angular/components/administration/user.service.js"></script>
-<script src="/static/angular/components/administration/source.service.js"></script>
+
+<script src="/static/angular/components/users/users.controller.js"></script>
+<script src="/static/angular/components/users/users.service.js"></script>
+
+<script src="/static/angular/components/sources/sources.service.js"></script>
+<script src="/static/angular/components/sources/sources.controller.js"></script>
+<script src="/static/angular/components/sources/sources.html"></script>
 </body>
 </html>
